[package]
name = "xal"
version = "0.1.0"
edition = "2018"
description = "Xbox Authentication library"
license = "MIT"
repository = "https://github.com/OpenXbox/xal-rs"
homepage = "https://openxbox.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cvlib = "0.1.2"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0.37"
url = "2.3.1"
http = "0.2.9"
log = "0.4.20"
p256 = "0.13.2"
base64ct = { version = "1.6.0", features = ["std"] }
sha2 = "0.10.8"
rand = "0.8.5"
oauth2 = "4.4.2"
nt-time = { version = "0.6.5", features = ["chrono"] }

[dev-dependencies]
hex-literal = "0.3.4"
tokio = { version = "1", features = ["macros"] }

[workspace]
members = [
    "examples"
]
