[package]
name = "xal_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xal = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.74"
env_logger = "0.10.1"
log = "0.4.20"
clap = { version = "4.4.8", features = ["derive"] }
chrono = "0.4.31"

# Optional dependencies
tokio = { version = "1", features = ["full"], optional = true }
wry = { version = "0.34.2", optional = true }

[features]
webview = ["dep:wry"]
tokio = ["dep:tokio"]

[[bin]]
name = "auth_cli"
required-features = ["tokio"]

[[bin]]
name = "auth_azure"
required-features = ["tokio"]

[[bin]]         
name = "auth_webview"
required-features = ["webview","tokio"]
