[package]
name = "xal_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xal = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.74"
env_logger = "0.10.1"
log = "0.4.20"
clap = { version = "4.4.8", features = ["derive"] }
chrono = "0.4.31"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }

# Optional dependencies
wry = { version = "0.34.2", optional = true }

[features]
webview = ["wry"]

[[bin]]
name = "auth_cli"

[[bin]]
name = "auth_azure"

[[bin]]
name = "auth_minecraft"

[[bin]]
name = "auth_halo"

[[bin]]
name = "xbl_signed_request"

[[bin]]         
name = "auth_webview"
required-features = ["webview"]